# Chess

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Game_basics.cpp  Game_basics.h  Game_basics.hpp  Gameplay.cpp  Gameplay.h  IObserver.h  Logger.h  Msoftcon.cpp  Msoftcon.h  Player.cpp  Player.h  Primitives.cpp  Primitives.h  README.md  Square.cpp  Square.h  Traits.cpp  Traits.h  buildDeb.bat  buildRel.bat  clr.bat  conanfile.py  conanfile.txt  main.cpp
CLI/: BoardDrawer.cpp  BoardDrawer.hpp  CLI.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Drawer.cpp  Drawer.hpp  FileDrawer.hpp  GameplayHandler.cpp  GameplayHandler.hpp  IDrawer.hpp  ILauncher.hpp  InputHandler.cpp  InputHandler.hpp  Launcher.cpp  Launcher.hpp  MatchSettingsIO.cpp  MatchSettingsIO.hpp  main.cpp
Core/: Board.hpp  CMakeLists.txt  Gameplay.cpp  Player.cpp  Player.hpp  Primitives.cpp  Primitives.hpp
Core/Core/: CMakeLists.txt  Gameplay.cpp  Gameplay.hpp  IGameplayHandler.hpp  IInputHandler.hpp  Match.cpp  Match.hpp  Player.hpp  Primitives.hpp  Settings.cpp  Timer.hpp
Core/Core/Piece/: Pawn.cpp  Pawn.hpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
Core/Piece/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.hpp  Pieces.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
Drawer/: CMakeLists.txt  Drawer.hpp
Interfaces/: CMakeLists.txt  IBoardDrawer.hpp  IDrawer.hpp  IInputHandler.hpp  ILauncher.hpp
Logger/: CMakeLists.txt  Logger.hpp
Piece/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.h  Pieces.hpp  Queen.hpp  Rook.cpp  Rook.hpp
cmake/: ConanExecution.cmake
src/: CMakeLists.txt
src/CLI/: CLI.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Drawer.cpp  Drawer.hpp  FileDrawer.hpp  InputHandler.cpp  InputHandler.hpp  MatchSettingsIO.cpp  MatchSettingsIO.hpp  Menu.cpp  Menu.hpp  main.cpp
src/Core/: Board.cpp  Board.ixx  CMakeLists.txt  Match.cpp  Match.hpp  Match.ixx  Player.cpp  Player.hpp  Player.ixx  Primitives.cpp  Primitives.hpp  Primitives.ixx  Settings.cpp  Settings.hpp  Settings.ixx  Timer.hpp  Timer.ixx
src/Core/Piece/: Bishop.cpp  Bishop.hpp  Bishop.ixx  King.cpp  King.hpp  King.ixx  Knight.cpp  Knight.hpp  Knight.ixx  Pawn.cpp  Pawn.hpp  Pawn.ixx  Piece.cpp  Piece.hpp  Piece.ixx  Pieces.ixx  Queen.cpp  Queen.hpp  Queen.ixx  Rook.cpp  Rook.hpp  Rook.ixx
src/Interfaces/: CMakeLists.txt  IClient.hpp  IDrawer.hpp  IDrawer.ixx  IInputHandler.hpp  IInputHandler.ixx  IMenu.hpp  Interfaces.ixx
src/Logger/: ILogger.cpp  ILogger.hpp
src/Server/: AdminCLI.cpp  AdminCLI.hpp  CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
